fix some line-heights on mobile

--- a/_sass/_components.features.scss
+++ b/_sass/_components.features.scss
@@ -143,7 +143,7 @@
 
     &__title {
       font-size: 29px;
-      line-height: 27px;
+      line-height: 1.2;
     }
 
     &__mini-title {
