--- a/_sass/_objects.sections.scss
+++ b/_sass/_objects.sections.scss
@@ -111,7 +111,7 @@
       margin-bottom: rhythm(5);
 
       h2 {
-        line-height: 31px;
+        line-height: 1.3;
       }
     }
   }
